add responsiv to avatar-choose-component

--- a/src/app/startscreen/avatar-choose/avatar-choose.component.html
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.html
@@ -9,7 +9,7 @@
     <div class="avatar-box">
       <img [src]="user.avatar" />
     </div>
-    <span>{{ userService.currentUser.fullName }}</span>
+    <span class="username-box">{{ userService.currentUser.fullName }}</span>
 
     <div class="choose-avatar-container">
       <div class="choose-avatar-text-box">Aus der Liste wählen</div>
