--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -1,8 +1,8 @@
-<div id="main-container">
+<div id="main-container" *ngIf="userFirebaseService.loadedUsers.length>0">
     
-    <app-header id="main-header"></app-header>
+    <app-header id="main-header" ></app-header>
     
-    <div id="main-body" *ngIf="channelFirebaseService.loadedChannels">    
+    <div id="main-body" *ngIf="channelFirebaseService.loadedChannels.length>0">    
         <app-sidenav *ngIf="sideNavOpen" id="main-sidebar"></app-sidenav>
         <app-channel *ngIf="channelOpen && channelFirebaseService.selectedChannelId" id="main-channel"></app-channel>
         <!-- <app-channel *ngIf="!channelOpen" id="main-chat"></app-channel>-->
