--- a/src/app/mainscreen/header/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/header/searchbar/searchbar.component.html
@@ -1,13 +1,18 @@
 <div id="header-searchfield-container" *ngIf="searchResultsChannels && searchResultsUsers">
     <input id="header-searchfield" 
-    type="text" [(ngModel)]="searchText" 
+    type="text"
     placeholder="Code learning durchsuchen" 
     [matAutocomplete]="auto"
     [formControl]="myControl"
     matInput
     >
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-        <mat-option *ngFor="let option of filteredOptions$ | async" [value]="option">{{option}}</mat-option>
+    <mat-autocomplete 
+        autoActiveFirstOption #auto="matAutocomplete"
+        (optionSelected)='selectOption($event.option.value)'
+    >
+        <mat-option *ngFor="let option of filteredOptions$ | async" [value]="option" 
+        
+        click="selectOption($event)">{{option}}</mat-option>
     </mat-autocomplete>
     <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" >
 </div>
