--- a/src/app/mainscreen/header/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/header/searchbar/searchbar.component.html
@@ -3,7 +3,7 @@
     type="text"
     placeholder="Code learning durchsuchen" 
     [matAutocomplete]="auto"
-    [formControl]="myControl"
+    [formControl]="headerControl"
     matInput
     >
     <mat-autocomplete 
