add responsiv to reset-password-component

--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -25,7 +25,7 @@
                 </ng-container>
                 <ng-template #normalPath>
                   <a [href]="_message.fileSrc" download="{{ _message.fileName }}" target="_blank">
-                    <img [src]="_message.fileSrc" alt="{{ _message.fileName }}" style="max-width: 100%; max-height: 200px;">
+                    <img [src]="_message.fileSrc" alt="{{ _message.fileName }}" class="img-box">
                   </a>
                 </ng-template>
               </ng-container>
