--- a/src/app/startscreen/reset-password/reset-password.component.html
+++ b/src/app/startscreen/reset-password/reset-password.component.html
@@ -14,7 +14,7 @@
         <a class="reset-password-icon" routerLink="/">
           <img src="./assets/img/icons/arrow_left_back.svg" />
         </a>
-        <h1>Passwort zurücksetzen</h1>
+        <p>Passwort zurücksetzen</p>
       </div>
     </div>
 
