--- a/src/app/startscreen/reset-password/reset-password.component.scss
+++ b/src/app/startscreen/reset-password/reset-password.component.scss
@@ -81,7 +81,7 @@
   gap: 40px;
   align-items: center;
 
-  h1 {
+  p {
     font-size: 46px;
     color: rgba(68, 77, 242, 1);
     margin: 0px;
@@ -164,5 +164,63 @@
     background-color: gray !important;
     color: white;
     cursor: not-allowed;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  #startScreen-register,
+  #startscreen-imprint-container {
+    display: none;
+  }
+
+  .startScreen-container {
+    display: flex;
+    justify-content: center;
+    margin: 16px;
+  }
+
+  .uper-startscreen-container {
+    justify-content: center;
+    margin-top: 0px;
+    padding-bottom: 30px;
+    padding-top: 0px;
+  }
+
+  #startScreen-logo {
+    padding-left: 0px;
+  }
+
+  .app-login {
+    width: 100%;
+  }
+
+  .app-register {
+    width: 100%;
+  }
+
+  .app-avatar {
+    width: 100%;
+  }
+
+  .reset-password-container {
+    width: 100%;
+    padding: 20px;
+    margin-left: 16px;
+    margin-right: 16px;
+
+    p {
+      max-width: 193px;
+      font-size: 32px;
+      font-weight: 700;
+    }
+  }
+
+  .reset-passwort-input-container {
+    width: 100%;
+  }
+
+  .reset-password-icon[_ngcontent-ng-c546112664] {
+    top: 30px;
+    left: 25px;
   }
 }
