--- a/src/app/startscreen/forgot-password/forgot-password.component.scss
+++ b/src/app/startscreen/forgot-password/forgot-password.component.scss
@@ -108,6 +108,7 @@
   margin-top: 35px;
   background-color: rgba(68, 77, 242, 1) !important;
   color: white !important;
+  font-family: 'Nunito', sans-serif;
 
   &:hover {
     background-color: rgba(121, 126, 243, 1) !important;
@@ -143,7 +144,6 @@
   }
 }
 
-/* Wende die Animation auf das Element an */
 .success-message {
   display: flex;
   position: absolute;
@@ -162,4 +162,47 @@
   animation: slide-in 0.4s ease-in-out, slide-out 0.4s ease-in-out 1.5s;
   font-weight: 700;
   gap: 28px;
+}
+
+@media screen and (max-width: 640px) {
+  .forgot-password-container {
+    padding: 40px 20px;
+    margin-right: 16px;
+    margin-left: 16px;
+    margin-bottom: 120px;
+
+    h1 {
+      font-size: 32px;
+      font-weight: 700px;
+      max-width: 193px;
+    }
+  }
+
+  .forgot-password-icon {
+    top: 35px;
+    left: 25px;
+  }
+
+  .forgot-password-title {
+    font-size: 17px;
+    gap: 12px;
+  }
+
+  .user-login-input-container {
+    gap: 12px;
+    margin-top: 0px;
+  }
+
+  
+  .forgot-password-info-box {
+    max-width: none;
+  }
+
+  .success-message {
+    top: 660px;
+    padding: 20px 30px;
+    max-width: 269px;
+    font-size: 22px;
+    gap: 18px;
+  }
 }
