--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -13,7 +13,7 @@
         <app-intro></app-intro>
         <app-register *ngIf="showRegister && !showLogin && !imprint && !privacyPolicy && !showAvatar" (closeRegisterView)="closeRegister()" class="app-register"></app-register>
         <app-avatar-choose *ngIf="showAvatar && !showLogin" (closeAvatarView)="closeAvatar()" class="app-avatar"></app-avatar-choose>
-        <app-forgot-password *ngIf="showForgotPassword" (closeForgotPasswordView)="closeForgotPassword()"></app-forgot-password>
+        <app-forgot-password *ngIf="showForgotPassword" (closeForgotPasswordView)="closeForgotPassword()" class="app-forgot"></app-forgot-password>
         <app-imprint *ngIf="imprint" (closeImprintView)="closeImprintAndPrivacy()"></app-imprint>
         <app-privacy-policy *ngIf="privacyPolicy" (closePrivacyPolicyView)="closeImprintAndPrivacy()"></app-privacy-policy>
     <div id="startscreen-imprint-container">
