--- a/src/app/mainscreen/sidenav/chat-view/chat-view.component.scss
+++ b/src/app/mainscreen/sidenav/chat-view/chat-view.component.scss
@@ -8,6 +8,11 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    gap:12px; 
+    
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 4px;
 
     &:hover {
         background-color: rgba(155, 150, 250, 0.37);
@@ -16,6 +21,39 @@
 
     .avatar0 {
         width: 50px;
-        padding-right: 23px;
+        border-radius: 50%;
     }
+    #header-user-icon {
+        position: relative;
+
+        img {
+            width: 50px;
+            border-radius: 50%;
+        }
+
+        #header-status {
+            position: absolute;
+            bottom: 4px;
+            right: 4px;
+            min-width: 10px;
+            min-height: 10px;
+            border-radius: 50%;
+            z-index: 10;
+            border: 1px solid white;
+        }
+    }
+}
+
+.col-red{
+    color: red;
+    background-color: red
+   
+}
+.col-green{
+    color: green;
+    background-color: green;
+}
+.col-gray{
+    color: gray;
+    background-color: gray;
 }
