--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -8,7 +8,7 @@
 
     .header {
         box-shadow: rgba(0, 0, 0, 0.8) 0 2px 23px -10px;
-        padding: 0px 35px 0px 35px;
+        padding: 8px 35px 8px 35px;
         border-radius: 30px 30px 0 0;
         display: flex;
         justify-content: space-between;
@@ -89,10 +89,27 @@
     padding: 0px 35px 0px 35px;
     display: flex;
     justify-content: space-between;
+    position: relative;
 
     .header-title {
         display: flex;
         align-items: center;
+
+        .header-title-container{
+            display: flex;
+            padding: 4px 12px 4px 12px;
+            h2{
+                margin: 0px;
+            }
+            .header-title-container-icons{
+                height: 30px;
+            }
+            &:hover{
+                color: #535AF1;
+                background-color: #ECEEFE; 
+                border-radius: 37px;
+            }
+        }
     }
 
     .user-avatar-list {
@@ -183,8 +200,8 @@ app-message-create {
     display: flex;
     align-items: center;
     justify-content: end;
-    width: 100%;
-    padding-top: 30px;
+    //width: 100%;
+    //padding-top: 30px;
 }
 
 .addMemberImage {
