--- a/src/app/mainscreen/sidenav/chat-view/chat-view.component.html
+++ b/src/app/mainscreen/sidenav/chat-view/chat-view.component.html
@@ -1,8 +1,13 @@
 <div class="message" *ngIf="user">
     <div *ngIf="user.avatar!=''" id="header-user-icon">
         <img  class="avatar0" src="{{user.avatar}}" alt="UserIcon">
-        <div id="header-status" [class.col-red]="user.status === 'offline'" [class.col-green]="user.status === 'online'"
-        [class.col-gray]="user.status !== 'online' && user.status !== 'offline'"></div>
+        <div id="header-status" 
+            [class.col-red]="user.status === 'offline'" 
+            [class.col-green]="user.status === 'online'"
+            [class.col-gray]="user.status !== 'online' && user.status !== 'offline'"  
+            matTooltip="{{user.status}}" 
+            [matTooltipShowDelay]="500">
+        </div>
     </div>
     <b>{{user.fullName}}</b>
 </div>
