--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.html
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.html
@@ -10,5 +10,8 @@
         </div>
         <h2># {{ channel.channelName }}</h2>
     </div>
+    <div>
+        <button (click)="leaveChannel()">Channel verlassen</button>
+    </div>
 </div>
 <div id="edit-channel-background" (click)="close()"></div>
