--- a/src/app/mainscreen/message/message-create/message-create.component.scss
+++ b/src/app/mainscreen/message/message-create/message-create.component.scss
@@ -5,6 +5,8 @@
     border: solid 1px #ADB0D9;
     border-radius: 20px;
     padding: 20px;
+    cursor: pointer;
+    
 
     .option-icons {
         z-index:9;
@@ -27,6 +29,8 @@
         margin-bottom: 60px;
         border: none;
         min-height: 30px;
+        font-size: 18px;
+        font-weight: 400;
 
         textarea {
             background-color: white;
@@ -37,6 +41,10 @@
         &:focus {
             outline: none;
         }
+    }
+
+    &:hover{
+        border: 1px solid rgba(68, 77, 242, 1);
     }
 }
 
@@ -60,7 +68,12 @@
 
 .msg-mods{
     display: flex;
-    align-items: flex-end;
+    gap: 5px;
+    align-items: center;
+
+    img{
+       padding: 8px; 
+    }
 }
 
 
@@ -69,9 +82,7 @@
     max-height: 60px;
     max-width: 60px;
     object-fit: cover;
-    padding-left: 30px;
     align-items: flex-end;
-    gap: 5px;
 
     img{
         border-radius: 30%;
@@ -85,7 +96,7 @@
     display: flex;
     position: absolute;
     height: 20px !important;
-    top: -6px;
-    left: 130px;
+    top: -18px;
+    left: 191px;
     cursor: pointer;
   }
