--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
@@ -8,7 +8,10 @@
     left: 30px;
     z-index: 15;
     box-shadow: 0px 6px 10px 0px #00000033;
-    padding: 0px 12px 0px 12px;
+    padding: 0px 12px 12px 12px;
+    gap:18px; 
+    display: flex;
+    flex-direction: column;
 
     #edit-channel-header{
         display: flex;
@@ -23,6 +26,87 @@
         a{
             color: #535AF1;
             text-decoration: unset;
+            cursor: pointer;
+        }
+        h3{
+            margin: 0px;
+        }
+    }
+    #edit-channel-name-container-editMode{
+        padding: 12px; 
+
+        a{
+            color: #535AF1;
+            text-decoration: unset;
+            cursor: pointer;
+        }
+        #edit-channel-name-container-editMode-input{
+            position: relative;
+
+            input{
+                border: 1px solid #ADB0D9; 
+                border-radius: 20px;
+                padding: 12px;
+                padding-left: 50px;
+                width: calc(100% - 24px - 30px);
+            }
+            #edit-channel-name-container-editMode-input-icon{
+                position: absolute;
+                top: -12px;
+                left: 24px;
+            }
+        }
+    }
+
+    #edit-channel-description-container-viewMode{
+        border: 1px solid #ADB0D9; 
+        border-radius: 20px;
+        padding: 12px;
+        a{
+            color: #535AF1;
+            text-decoration: unset;
+            cursor: pointer;
+        }
+        h3{
+            margin: 0px;
+        }
+    }
+
+    #edit-channel-description-container-editMode{
+        padding: 12px; 
+        a{
+            color: #535AF1;
+            text-decoration: unset;
+            cursor: pointer;
+        }
+        #edit-channel-description-container-editMode-input{
+            position: relative;
+
+            input{
+                border: 1px solid #ADB0D9; 
+                border-radius: 20px;
+                padding: 12px;
+                padding-left: 50px;
+                width: calc(100% - 24px - 30px);
+            }
+        }
+    }
+
+
+
+
+    #edit-channel-leaveChannel{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        button{
+            color: white;
+            background: #444DF2;
+            padding: 12px 25px 12px 25px;
+            border-radius: 20px; 
+            border: 0px;
+            font-size: 1em;
+            cursor: pointer;
         }
     }
 }
@@ -42,4 +126,16 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+.divider-container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 12px 0px 12px 0px;
+    .divider{
+        height: 1px;
+        width: 100%;
+        background-color:  #ADB0D9; 
+      
+    }
 }
