--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -1,14 +1,24 @@
 <div id="main-container" *ngIf="userFirebaseService.loadedUsers.length>0">
-    
-    <app-header id="main-header" ></app-header>
-    
-    <div id="main-body" *ngIf="channelFirebaseService.loadedChannels.length>0">    
+
+    <app-header id="main-header"></app-header>
+
+    <div id="main-body" *ngIf="channelFirebaseService.loadedChannels.length>0">
         <app-sidenav *ngIf="sideNavOpen" id="main-sidebar"></app-sidenav>
-        <app-chat *ngIf="chatFirebaseService.selectedChatId" id="main-chat"></app-chat>
-        <app-channel *ngIf="channelFirebaseService.selectedChannelId" id="main-channel"></app-channel>
-        
-        <!-- <app-channel *ngIf="!channelOpen" id="main-chat"></app-channel>-->
-        <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
+        <ng-container *ngIf="chatFirebaseService.selectedChat; then chatView; else channelView">
+        </ng-container>
+
+        <ng-template #chatView>
+            <app-chat *ngIf="chatFirebaseService.selectedChatId" id="main-chat"></app-chat>
+        </ng-template>
+        <ng-template #channelView>
+            <app-channel *ngIf="channelFirebaseService.selectedChannelId" id="main-channel"></app-channel>
+            <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
+        </ng-template>
+
+
+
+
+
     </div>
 </div>
 
